--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "referencekernels.h": "c",
     "24bitreferencekernels.c.h": "c",
     "math.h": "c",
-    "8bitreferencekernels.h": "c"
+    "8bitreferencekernels.h": "c",
+    "stdlib.h": "c"
   }
 }
