fix all compilation warnings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
     "math.h": "c",
     "8bitreferencekernels.h": "c",
     "stdlib.h": "c",
-    "pixeldata.h": "c"
+    "pixeldata.h": "c",
+    "loadingpixeldata.h": "c"
   }
 }
