--- a/Final Build/Convert/Makefile
+++ b/Final Build/Convert/Makefile
@@ -5,7 +5,6 @@ CFLAGS = -Wall -O2
 # Define the source file, executable name, and input/output files
 SRC = convertTo8Bit.c
 EXE = convertTo8Bit.exe
-INPUT = input.bmp
 OUTPUT = output.bmp
 PIXELDATA_H = pixeldata.h
 PIXELDATA_NAME = output_bmp
@@ -22,6 +21,10 @@ $(EXE): $(SRC)
 
 # Run the executable with the input file
 run: $(EXE)
+	if [ -z "$(INPUT)" ]; then \
+		echo "Error: INPUT file not specified"; \
+		exit 1; \
+	fi
 	./$(EXE) $(INPUT)
 	xxd -i -n output_bmp -s 0x48A $(OUTPUT) > $(BOARD_DIR)/$(PIXELDATA_H)
 	xxd -i -n static_output_bmp -s 0x48A $(OUTPUT) > $(BOARD_DIR)/$(STATIC_PIXELDATA_H)
