try to display register values

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "stdlib.h": "c",
     "pixeldata.h": "c",
     "loadingpixeldata.h": "c",
-    "statickernels.h": "c"
+    "statickernels.h": "c",
+    "imageprocessing.h": "c"
   }
 }
